# SFF_Algorithm

./: README.md
lang/: cppcustophe.lang
src/: CMakeLists.txt  ChangeParameters.sh  IOWizard.cpp  IOWizard.h  depthEstimator.h  energy2.h  evaluation.h  mainSFF.cpp  metascript (copy 1).sh  miscdef.cpp  miscdef.h  optimization.h  script.sh  script_autofolders.sh  script_s96.sh  sffClass.cpp  sffClass.h  sharpnessOperator.cpp  sharpnessOperator.h  testClass.h
src/gco/: GCoptimization.h  energy.h
src/io/: IOWizard.cpp  IOWizard.h  filemgmt.cpp  logs.cpp  logs.h  mgldrw.h
src/misc/: miscdef.cpp  miscdef.h  testClass.cpp  testClass.h  testRMSE.cpp
src/scripts/: ChangeParameters.sh  classic.param.txt  concatenate.sh  gauss.param.txt  gauss_N1.param.txt  metascript.sh  polymod.param.txt  script_all.sh  script_autofolders.sh  script_parallel.sh
src/scripts/__L1Params/: L1gauss.param.txt  L1gaussN1.param.txt  L1gaussN1_MLAP.param.txt  L1gaussN2.param.txt  L1gaussN2_MLAP.param.txt  L1gauss_MLAP.param.txt  L1polynome.param.txt  L1polynomeN1.param.txt  L1polynomeN1_MLAP.param.txt  L1polynomeN2.param.txt  L1polynomeN2_MLAP.param.txt  L1polynome_MLAP.param.txt
src/scripts/__L2paramsdiskarded/: L2gauss.param.txt  L2gaussN1.param.txt  L2gaussN1_MLAP.param.txt  L2gaussN2.param.txt  L2gaussN2_MLAP.param.txt  L2gauss_MLAP.param.txt  L2polynome.param.txt  L2polynomeN1.param.txt  L2polynomeN1_MLAP.param.txt  L2polynomeN2.param.txt  L2polynomeN2_MLAP.param.txt  L2polynome_MLAP.param.txt
src/tool/: depthEstimator.cpp  depthEstimator.h  energy2.cpp  energy2.h  evaluation.cpp  evaluation.h  optimization.cpp  optimization.h  optiplan.cpp  optiplan.h  pretreat.cpp  pretreat.h  sharpnessOperator.cpp  sharpnessOperator.h  timer.cpp  timer.h  utils.cpp  utils.h
